# audio_classifier

./: .gitignore  README.md  download_dataset.py  inference.js  inference.py  mel_spec.js  mel_spec.py  mel_spec_rosa.py  prepare_dataset.py  pyproject.toml  train.py
